--- a/src/app/views/components/bottom-sheet/bottom-sheet.component.html
+++ b/src/app/views/components/bottom-sheet/bottom-sheet.component.html
@@ -28,7 +28,7 @@
   <div>
     <forge-text-field>
       <label for="add-class" slot="label">Custom bottom sheet class</label>
-      <input type="text" id="add-class" [(ngModel)]="bottomSheetClass" />
+      <input type="text" id="add-class" [(ngModel)]="bottomSheetClass">
     </forge-text-field>
   </div>
 </app-demo-card>
