--- a/src/app/views/components/chip-field/chip-field-autocomplete/chip-field-autocomplete.component.html
+++ b/src/app/views/components/chip-field/chip-field-autocomplete/chip-field-autocomplete.component.html
@@ -8,7 +8,7 @@
         {{state}}
       </forge-chip>
     </ng-container>
-    <input type="text" id="autocomplete-chip-field-input" aria-label="Choose State" [disabled]="isDisabled" />
+    <input type="text" id="autocomplete-chip-field-input" aria-label="Choose State" [disabled]="isDisabled">
     <div slot="helper-text">Select your favorite states</div>
   </forge-chip-field>
 </forge-autocomplete>
