--- a/src/app/views/components/dialog/dialog.component.html
+++ b/src/app/views/components/dialog/dialog.component.html
@@ -23,8 +23,8 @@
     </forge-scaffold>
   </forge-dialog>
 
-  <br />
-  <br />
+  <br>
+  <br>
 
   <div>
     <forge-checkbox [(ngModel)]="nonmodal">Non-modal</forge-checkbox>
@@ -53,7 +53,7 @@
   <div>
     <forge-text-field>
       <label for="add-class" slot="label">Custom dialog class</label>
-      <input type="text" id="add-class" [(ngModel)]="dialogClass" />
+      <input type="text" id="add-class" [(ngModel)]="dialogClass">
     </forge-text-field>
   </div>
 </app-demo-card>
