--- a/src/app/views/components/toast/toast.component.html
+++ b/src/app/views/components/toast/toast.component.html
@@ -3,17 +3,17 @@
 
   <forge-text-field>
     <label for="message">Message</label>
-    <input type="text" id="message" [(ngModel)]="message" />
+    <input type="text" id="message" [(ngModel)]="message">
   </forge-text-field>
 
   <forge-text-field>
     <label for="action-text">Action Text</label>
-    <input type="text" id="action-text" [(ngModel)]="actionText" />
+    <input type="text" id="action-text" [(ngModel)]="actionText">
   </forge-text-field>
 
   <forge-text-field>
     <label for="duration">Duration (ms)</label>
-    <input type="number" id="duration" [(ngModel)]="duration" />
+    <input type="number" id="duration" [(ngModel)]="duration">
   </forge-text-field>
 
   <forge-select id="placement" label="Placement" [(ngModel)]="placement">
