--- a/src/app/views/examples/toolbar-example/toolbar-example.component.html
+++ b/src/app/views/examples/toolbar-example/toolbar-example.component.html
@@ -59,8 +59,7 @@
         <p class="forge-typography--subheading2-secondary">Human Resource Performance Certification</p>
       </div>
 
-      <img src="../../../../assets/images/chart-placeholder.png" alt="Chart example" width="150px"
-        class="chart-placeholder">
+      <img src="../../../../assets/images/chart-placeholder.png" alt="Chart example" width="150px" class="chart-placeholder">
     </div>
 
     <forge-toolbar slot="footer">
