--- a/src/app/views/examples/two-column-grid/two-column-grid.component.html
+++ b/src/app/views/examples/two-column-grid/two-column-grid.component.html
@@ -35,12 +35,12 @@
       </div>
 
       <forge-toolbar slot="footer" style="--forge-toolbar-border-bottom: none">
-        <p slot="center" class="forge-typography--body1">
+        <p slot="center">
           <span style="color: var(--forge-theme-text-medium)">Estimated recording fees</span>
           <br>
           Total
         </p>
-        <p slot="end" class="forge-typography--body1">
+        <p slot="end">
           <span style="color: var(--forge-theme-text-medium)">$100</span>
           <br>
           $150
