--- a/src/app/views/components/autocomplete/autocomplete.component.html
+++ b/src/app/views/components/autocomplete/autocomplete.component.html
@@ -1,9 +1,9 @@
 <app-demo-card headerText="Autocomplete">
   <forge-autocomplete [(ngModel)]="selectedState" [filter]="filterListener">
     <forge-text-field>
-      <input type="text" id="input-state-single" />
+      <input type="text" id="input-state-single">
       <label for="input-state">Choose State</label>
-      <forge-icon slot="trailing" name="arrow_drop_down" class="forge-dropdown-icon"></forge-icon>
+      <forge-icon slot="end" name="arrow_drop_down" class="forge-dropdown-icon"></forge-icon>
     </forge-text-field>
   </forge-autocomplete>
   <div>Value: {{selectedState | json}}</div>
@@ -11,7 +11,7 @@
   <h4>Multiple</h4>
   <forge-autocomplete multiple="true" [(ngModel)]="selectedStates" [filter]="filterListener">
     <forge-text-field>
-      <input type="text" id="input-state-multi" />
+      <input type="text" id="input-state-multi">
       <label for="input-state">Choose States</label>
     </forge-text-field>
   </forge-autocomplete>
