--- a/src/app/views/components/bottom-sheet/lazy/lazy-bottom-sheet.component.html
+++ b/src/app/views/components/bottom-sheet/lazy/lazy-bottom-sheet.component.html
@@ -2,7 +2,7 @@
   <h5 class="forge-dialog__title">{{title}}</h5>
 </header>
 <section class="forge-dialog__body forge-bottom-sheet__body">
-  <p id="bottom-sheet-desc">{{message}}<br/>This content was lazy-loaded.</p>
+  <p id="bottom-sheet-desc">{{message}}<br>This content was lazy-loaded.</p>
 </section>
 <footer class="forge-dialog__footer">
   <forge-button autofocus (click)="onCancel()">Cancel</forge-button>
