--- a/src/app/views/components/date-range-picker/date-range-picker-simple/date-range-picker-simple.component.html
+++ b/src/app/views/components/date-range-picker/date-range-picker-simple/date-range-picker-simple.component.html
@@ -28,7 +28,7 @@
     <span slot="value">{{toDate || 'n/a'}}</span>
   </forge-label-value>
   <forge-label-value [empty]="!dateRangePicker.value">
-    <forge-tooltip position="top-start">note that the JSON conversion internally converts date object to iso-string format</forge-tooltip>
+    <forge-tooltip placement="top-start">note that the JSON conversion internally converts date object to iso-string format</forge-tooltip>
     <span slot="label" class="form-value-label">
       Form value
       <forge-icon name="info_outline" class="info-icon"></forge-icon>
