--- a/src/app/views/components/page-state/page-state.component.html
+++ b/src/app/views/components/page-state/page-state.component.html
@@ -1,6 +1,6 @@
 <app-demo-card headerText="Page State">
   <forge-page-state>
-    <img src="assets/images/404-spot-hero.svg" slot="graphic" />
+    <img src="assets/images/404-spot-hero.svg" slot="graphic">
     <div slot="title">Nothing but tumbleweeds here...</div>
     <div slot="message">Even our best explorer couldn't find the page you're looking for. It might have been removed or you may have mistyped the URL.</div>
     <forge-button variant="raised" slot="action">Go back</forge-button>
