--- a/src/app/views/components/tooltip/tooltip.component.html
+++ b/src/app/views/components/tooltip/tooltip.component.html
@@ -5,13 +5,13 @@
   <div>
     <forge-text-field>
       <label for="tooltip-text">Text</label>
-      <input type="text" id="tooltip-text" [(ngModel)]="text" />
+      <input type="text" id="tooltip-text" [(ngModel)]="text">
     </forge-text-field>
   </div>
   <div>
     <forge-text-field>
       <label for="tooltip-delay">Delay (ms)</label>
-      <input type="number" id="tooltip-delay" [(ngModel)]="delay" />
+      <input type="number" id="tooltip-delay" [(ngModel)]="delay">
     </forge-text-field>
   </div>
   <forge-select id="tooltip-placement" label="Placement}" [(ngModel)]="placement">
