--- a/src/app/views/examples/expansion-panel-examples/components/view-switcher/view-switcher.component.html
+++ b/src/app/views/examples/expansion-panel-examples/components/view-switcher/view-switcher.component.html
@@ -12,7 +12,7 @@
         <div style="display: flex; justify-content: flex-start;">
           <forge-label-value style="margin-right: 48px;">
             <span slot="label">Address</span>
-            <span slot="value">{{user.address.suite}} {{user.address.street}} <br /></span>
+            <span slot="value">{{user.address.suite}} {{user.address.street}} <br></span>
             <span slot="value">{{user.address.city}}, {{user.address.state}} {{user.address.zipcode}}</span>
           </forge-label-value>
 
@@ -29,7 +29,7 @@
       </forge-view>
       <forge-view>
         <forge-page-state>
-          <img src="https://cdn.forge.tylertech.com/v1/images/spot/bill-pay-spot.svg" alt="A document with a money sign marked with a checkmark" slot="graphic" />
+          <img src="https://cdn.forge.tylertech.com/v1/images/spot/bill-pay-spot.svg" alt="A document with a money sign marked with a checkmark" slot="graphic">
           <div slot="title">No past bills!</div>
         </forge-page-state>
       </forge-view>
