--- a/src/app/views/examples/table-example/table-example.component.html
+++ b/src/app/views/examples/table-example/table-example.component.html
@@ -29,46 +29,34 @@
   </div>
 
   <div *ngIf="journalSelectionCount > 0" class="selection-header">
-    <div class="forge-typography--body1">
+    <div>
       {{journalSelectionCount}} journals selected
     </div>
     <div class="journal-action-buttons">
       <forge-button>
-        <button type="button">
-          <forge-icon name="import_export"></forge-icon>
+        <forge-icon name="import_export"></forge-icon>
           <span>Export</span>
-        </button>
-      </forge-button>
+        </forge-button>
       <forge-button>
-        <button type="button">
-          <forge-icon name="note_add"></forge-icon>
+        <forge-icon name="note_add"></forge-icon>
           <span>Post</span>
-        </button>
-      </forge-button>
+        </forge-button>
       <forge-button>
-        <button type="button">
-          <forge-icon name="print"></forge-icon>
+        <forge-icon name="print"></forge-icon>
           <span>Print</span>
-        </button>
-      </forge-button>
+        </forge-button>
       <forge-button>
-        <button type="button">
-          <forge-icon name="compare_arrows"></forge-icon>
+        <forge-icon name="compare_arrows"></forge-icon>
           <span>Release</span>
-        </button>
-      </forge-button>
+        </forge-button>
       <forge-button>
-        <button type="button">
-          <forge-icon name="not_interested"></forge-icon>
+        <forge-icon name="not_interested"></forge-icon>
           <span>Void</span>
-        </button>
-      </forge-button>
+        </forge-button>
       <forge-button (click)="clearSelections()">
-        <button type="button">
-          <forge-icon name="close"></forge-icon>
+        <forge-icon name="close"></forge-icon>
           <span>Cancel</span>
-        </button>
-      </forge-button>
+        </forge-button>
     </div>
   </div>
 
@@ -80,10 +68,10 @@
       [filter]="showFilter"
       (forge-table-select)="onTableRowSelected($event)"
       (forge-table-select-all)="onTableSelectAll($event)"
-      select="true"
+      select
       select-key="number"
-      multiple="true"
-      resizeable="true">
+      multiple
+      resizeable>
     </forge-table>
   </div>
   <div class="table-footer">
