--- a/src/app/views/components/dialog/dialog.component.html
+++ b/src/app/views/components/dialog/dialog.component.html
@@ -7,6 +7,8 @@
   <forge-dialog
     class="inline-dialog"
     trigger="show-inline-dialog"
+    label="Inline Dialog"
+    description="This is an inline dialog"
     #inlineDialog
     [moveable]="moveable"
     [mode]="nonmodal ? 'nonmodal' : 'modal'"
