feat: upgrade to forge 3.8.0

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,6 +7,6 @@
     <forge-icon-button (click)="toggleTheme()">
       <forge-icon [name]="themeSwitcherIcon"></forge-icon>
     </forge-icon-button>
-    <forge-tooltip type="label" placement="left">Toggle theme</forge-tooltip>
+    <forge-tooltip type="label" placement="bottom-end">Toggle theme</forge-tooltip>
   </div>
 </forge-app-bar>
