refactor: control-flow syntax migration

--- a/src/app/views/components/chip-field/chip-field-autocomplete-reactive-form/chip-field-autocomplete-reactive-form.component.html
+++ b/src/app/views/components/chip-field/chip-field-autocomplete-reactive-form/chip-field-autocomplete-reactive-form.component.html
@@ -3,19 +3,23 @@
   <forge-autocomplete multiple="true" [filter]="filterListener" formControlName="states">
     <forge-chip-field (forge-chip-field-member-added)="selectState($event)" (forge-chip-field-member-removed)="deselectState($event)" [invalid]="statesControl.invalid" required>
       <label slot="label" for="autocomplete-chip-field-input">Favorite states</label>
-      <ng-container *ngFor="let state of statesControl.value">
+      @for (state of statesControl.value; track state) {
         <forge-chip slot="member" type="field" dense (forge-chip-delete)="deselectState($event)" [value]="state" [invalid]="statesControl.invalid" [disabled]="statesControl.disabled">
           <forge-icon slot="leading" name="place"></forge-icon>
           {{state}}
         </forge-chip>
-      </ng-container>
+      }
       <input type="text" id="autocomplete-chip-field-input" aria-label="Choose State" [disabled]="statesControl.disabled">
-      <div slot="helper-text" *ngIf="!statesControl.invalid">
-        Select your favorite states
-      </div>
-      <div slot="helper-text" *ngIf="statesControl.invalid">
-        At least 2 states are required
-      </div>
+      @if (!statesControl.invalid) {
+        <div slot="helper-text">
+          Select your favorite states
+        </div>
+      }
+      @if (statesControl.invalid) {
+        <div slot="helper-text">
+          At least 2 states are required
+        </div>
+      }
     </forge-chip-field>
   </forge-autocomplete>
   <forge-button variant="raised" type="submit" [disabled]="autocompleteForm.invalid">Submit</forge-button>
