--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,44 +1,47 @@
-<ng-container *ngIf="isSmallViewPort; else largeViewPort">
+@if (isSmallViewPort) {
   <forge-dialog aria-label="Navigation menu" preset="left-sheet" (forge-dialog-close)="closeSidenav()" [open]="open">
     <div class="dialog-sidenav">
       <ng-container *ngTemplateOutlet="sidenavContent"></ng-container>
     </div>
   </forge-dialog>
-</ng-container>
-
-<ng-template #largeViewPort>
+} @else {
   <forge-drawer>
     <aside>
       <ng-container *ngTemplateOutlet="sidenavContent"></ng-container>
     </aside>
   </forge-drawer>
-</ng-template>
+}
+
 
 <ng-template #sidenavContent>
   <forge-list navlist>
-      <forge-list-item [selected]="homeLink.isActive">
-        <forge-icon name="home" slot="start"></forge-icon>
-        <a routerLink="/" #homeLink="routerLinkActive" routerLinkActive [routerLinkActiveOptions]="{exact: true}" ariaCurrentWhenActive="page">Home</a>
+    <forge-list-item [selected]="homeLink.isActive">
+      <forge-icon name="home" slot="start"></forge-icon>
+      <a routerLink="/" #homeLink="routerLinkActive" routerLinkActive [routerLinkActiveOptions]="{exact: true}" ariaCurrentWhenActive="page">Home</a>
+    </forge-list-item>
+    <forge-expansion-panel #componentExpansionPanel>
+      <forge-list-item slot="header">
+        <forge-icon name="settings_input_component" slot="start"></forge-icon>
+        <button>Components</button>
+        <forge-open-icon slot="end"></forge-open-icon>
       </forge-list-item>
-      <forge-expansion-panel #componentExpansionPanel>
-        <forge-list-item slot="header">
-          <forge-icon name="settings_input_component" slot="start"></forge-icon>
-          <button>Components</button>
-          <forge-open-icon slot="end"></forge-open-icon>
-        </forge-list-item>
-        <forge-list-item indented *ngFor="let item of componentMenuItems" [selected]="componentMenuLink.isActive">
+      @for (item of componentMenuItems; track item) {
+        <forge-list-item indented [selected]="componentMenuLink.isActive">
           <a [routerLink]="[item.value]" #componentMenuLink="routerLinkActive" routerLinkActive [routerLinkActiveOptions]="{exact: true}" ariaCurrentWhenActive="page">{{item.label}}</a>
         </forge-list-item>
-      </forge-expansion-panel>
-      <forge-expansion-panel #exampleExpansionPanel>
-        <forge-list-item slot="header">
-          <forge-icon name="settings" slot="start"></forge-icon>
-          <button>Examples</button>
-          <forge-open-icon slot="end"></forge-open-icon>
-        </forge-list-item>
-        <forge-list-item indented *ngFor="let item of exampleMenuItems" [selected]="exampleLink.isActive">
+      }
+    </forge-expansion-panel>
+    <forge-expansion-panel #exampleExpansionPanel>
+      <forge-list-item slot="header">
+        <forge-icon name="settings" slot="start"></forge-icon>
+        <button>Examples</button>
+        <forge-open-icon slot="end"></forge-open-icon>
+      </forge-list-item>
+      @for (item of exampleMenuItems; track item) {
+        <forge-list-item indented [selected]="exampleLink.isActive">
           <a [routerLink]="[item.value]" #exampleLink="routerLinkActive" routerLinkActive [routerLinkActiveOptions]="{exact: true}" ariaCurrentWhenActive="page">{{item.label}}</a>
         </forge-list-item>
-      </forge-expansion-panel>
+      }
+    </forge-expansion-panel>
   </forge-list>
 </ng-template>
