--- a/src/app/views/components/chip-field/chip-field-simple-reactive-form/chip-field-simple-reactive-form.component.html
+++ b/src/app/views/components/chip-field/chip-field-simple-reactive-form/chip-field-simple-reactive-form.component.html
@@ -2,18 +2,22 @@
 <form [formGroup]="chipFieldForm" (ngSubmit)="onSubmit()" (keydown.enter)="$any($event).target.id !== 'simple-form-chip-field-input'">
   <forge-chip-field (forge-chip-field-member-added)="addMember($event)" (forge-chip-field-member-removed)="deleteMember($event)" [invalid]="tokensFormArray.invalid" required>
     <label slot="label" for="simple-form-chip-field-input">Tokens</label>
-    <ng-container *ngFor="let control of tokensFormArray.controls">
+    @for (control of tokensFormArray.controls; track control) {
       <forge-chip slot="member" type="field" dense (forge-chip-delete)="deleteMember($event)" [value]="control.value" [invalid]="tokensFormArray.invalid" [disabled]="tokensFormArray.disabled">
         {{control.value}}
       </forge-chip>
-    </ng-container>
+    }
     <input type="text" id="simple-form-chip-field-input" [disabled]="tokensFormArray.disabled">
-    <div slot="helper-text" *ngIf="!tokensFormArray.invalid">
-      Tokens for stuff
-    </div>
-    <div slot="helper-text" *ngIf="tokensFormArray.invalid">
-      At least 2 tokens are required
-    </div>
+    @if (!tokensFormArray.invalid) {
+      <div slot="helper-text">
+        Tokens for stuff
+      </div>
+    }
+    @if (tokensFormArray.invalid) {
+      <div slot="helper-text">
+        At least 2 tokens are required
+      </div>
+    }
   </forge-chip-field>
   <forge-button variant="raised" type="submit" [disabled]="chipFieldForm.invalid">Submit</forge-button>
 </form>
