--- a/src/app/views/components/view-switcher/view-switcher.component.html
+++ b/src/app/views/components/view-switcher/view-switcher.component.html
@@ -2,15 +2,19 @@
   <forge-button variant="raised" (click)="onAddView()">Add view</forge-button>
 
   <forge-tab-bar [activeTab]="index" (forge-tab-bar-change)="index = $event.detail.index">
-    <forge-tab *ngFor="let tab of tabs">{{tab}}</forge-tab>
+    @for (tab of tabs; track tab) {
+      <forge-tab>{{tab}}</forge-tab>
+    }
   </forge-tab-bar>
 
   <forge-view-switcher [index]="index" animation-type="slide">
-    <forge-view *ngFor="let view of views; let i = index">
-      <div class="view-container">
-        {{view}}
-        <forge-button variant="outlined" (click)="onRemoveView(i)">Remove</forge-button>
-      </div>
-    </forge-view>
+    @for (view of views; track view; let i = $index) {
+      <forge-view>
+        <div class="view-container">
+          {{view}}
+          <forge-button variant="outlined" (click)="onRemoveView(i)">Remove</forge-button>
+        </div>
+      </forge-view>
+    }
   </forge-view-switcher>
 </app-demo-card>
