--- a/src/app/views/examples/toolbar-example/toolbar-example.component.html
+++ b/src/app/views/examples/toolbar-example/toolbar-example.component.html
@@ -2,7 +2,7 @@
 
   <forge-card>
     <!-- scaffold is not specifically required here since the card has its own similar set of slots.
-      We just want to demo that the scaffold can be used for smaller layouts as well. -->
+    We just want to demo that the scaffold can be used for smaller layouts as well. -->
     <forge-scaffold>
 
       <forge-toolbar slot="header" class="toolbar--no-footer">
@@ -72,28 +72,30 @@
       <h3 slot="start" class="forge-typography--heading4">Recent feedback</h3>
     </forge-toolbar>
 
-    <div *ngFor="let data of feedbackData">
-      <div class="padding-16 feedback-container">
-        <h3 class="forge-typography--subheading2-secondary span-full">{{data.title}}</h3>
-        <forge-label-value>
-          <span slot="label">From</span>
-          <span slot="value">{{data.from}}</span>
-        </forge-label-value>
-        <forge-label-value>
-          <span slot="label">Date</span>
-          <span slot="value">{{data.date}}</span>
-        </forge-label-value>
-        <forge-label-value>
-          <span slot="label">Type</span>
-          <span slot="value">{{data.type}}</span>
-        </forge-label-value>
-        <forge-label-value class="span-full">
-          <span slot="label">Details</span>
-          <span slot="value">{{data.details}}</span>
-        </forge-label-value>
+    @for (data of feedbackData; track data) {
+      <div>
+        <div class="padding-16 feedback-container">
+          <h3 class="forge-typography--subheading2-secondary span-full">{{data.title}}</h3>
+          <forge-label-value>
+            <span slot="label">From</span>
+            <span slot="value">{{data.from}}</span>
+          </forge-label-value>
+          <forge-label-value>
+            <span slot="label">Date</span>
+            <span slot="value">{{data.date}}</span>
+          </forge-label-value>
+          <forge-label-value>
+            <span slot="label">Type</span>
+            <span slot="value">{{data.type}}</span>
+          </forge-label-value>
+          <forge-label-value class="span-full">
+            <span slot="label">Details</span>
+            <span slot="value">{{data.details}}</span>
+          </forge-label-value>
+        </div>
+        <forge-divider class="span-full"></forge-divider>
       </div>
-      <forge-divider class="span-full"></forge-divider>
-    </div>
+    }
 
     <forge-toolbar slot="footer">
       <forge-paginator slot="start" total="100"></forge-paginator>
