--- a/src/app/views/examples/table-example/table-menu-cell/table-menu-cell.component.html
+++ b/src/app/views/examples/table-example/table-menu-cell/table-menu-cell.component.html
@@ -1,4 +1,4 @@
-<forge-menu [options]="options" (forge-menu-select)="onMenuOptionSelected($event.detail.value)">
+<forge-menu [options]="options()" (forge-menu-select)="onMenuOptionSelected($event.detail.value)">
   <forge-icon-button>
     <forge-icon name="more_vert"></forge-icon>
   </forge-icon-button>
