--- a/src/app/components/demo-card/demo-card.component.html
+++ b/src/app/components/demo-card/demo-card.component.html
@@ -1,4 +1,4 @@
-<forge-card [ngClass]="{'full-width': fullWidth }">
-  <h2>{{headerText}}</h2>
+<forge-card [ngClass]="{'full-width': fullWidth() }">
+  <h2>{{headerText()}}</h2>
   <ng-content></ng-content>
 </forge-card>
