--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <forge-scaffold>
-  <app-header slot="header" (menuClicked)="onMenuClicked()" [showDrawerToggle]="canCloseDrawer"></app-header>
-  <app-sidenav slot="body-left" [open]="isDrawerOpen" (onClose)="isDrawerOpen = false" (onModalChange)="canCloseDrawer = $event"></app-sidenav>
+  <app-header slot="header"></app-header>
+  <app-sidenav slot="body-left"></app-sidenav>
   <main class="app-content" slot="body">
     <router-outlet></router-outlet>
   </main>
